test/libsolidity/syntaxTests/nameAndTypeResolution/537_array_length_invalid_expression_int_divides_bool.sol
contract C {
    uint[true/1] ids;
}
// ----
// TypeError 5462: (22-28='true/1'): Invalid array length, expected integer literal or constant expression.
